connect client to server via socket #29

--- a/views/layout/default.html
+++ b/views/layout/default.html
@@ -7,7 +7,11 @@
   <title>Chat</title>
   <link rel="icon" href="#">
   <link rel="stylesheet" type="text/css" href="/public/css/main.css" media="screen" />
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <body>
 	{{{content}}}
+
+  <script src="/socket.io/socket.io.js"></script>
+
 </body>
 </html>
