saving new user to database

--- a/views/rooms.html
+++ b/views/rooms.html
@@ -1,4 +1,5 @@
 
-<h1>Welcome {{name}}</h1>
+<h1>Welcome {{user.fullName}}</h1>
+<img src="{{user.profilePic}}" alt=""/>
 <h1>List of all rooms</h1>
 <script src="/public/js/rooms.js"></script>
