--- a/views/rooms.html
+++ b/views/rooms.html
@@ -2,4 +2,5 @@
 <h1>Welcome {{user.fullName}}</h1>
 <img src="{{user.profilePic}}" alt=""/>
 <h1>List of all rooms</h1>
+<a href="/logout">Logout</a>
 <script src="/public/js/rooms.js"></script>
