--- a/views/rooms.html
+++ b/views/rooms.html
@@ -1,6 +1,14 @@
 
 <h1>Welcome {{user.fullName}}</h1>
 <img src="{{user.profilePic}}" alt=""/>
+
 <h1>List of all rooms</h1>
+<ul class="roomsList" id="roomsListUL">
+
+  {{#each chatrooms}}
+  <a href="/room/{{title}}"><li>{{title}}</li></a>
+  {{/each}}
+
+</ul>
 <a href="/logout">Logout</a>
 <script src="/public/js/rooms.js"></script>
