storing in hapi memory the list of rooms and new room

--- a/views/rooms.html
+++ b/views/rooms.html
@@ -2,12 +2,11 @@
 <h1>Welcome {{user.fullName}}</h1>
 <img src="{{user.profilePic}}" alt=""/>
 
+<input type="text" name="newRoom" placeholder="Create new chat room">
+<a href="#" id="createBtn">Create</a>
+<br>
 <h1>List of all rooms</h1>
 <ul class="roomsList" id="roomsListUL">
-
-  {{#each chatrooms}}
-  <a href="/room/{{title}}"><li>{{title}}</li></a>
-  {{/each}}
 
 </ul>
 <a href="/logout">Logout</a>
