chat messages functionality - basic

--- a/views/room.html
+++ b/views/room.html
@@ -11,6 +11,16 @@
 
 </div>
 
+<div class="chatMessages">
+  
+</div>
+<br>
+<br>
+<br>
+<div class="typePanel">
+  <input type="text" name="userInput" placeholder="Type here and press enter">
+</div>
+
 <a href="/rooms">Rooms</a>
 <input type="hidden" name="userName" value="{{user.fullName}}"></input>
 <input type="hidden" name="userPic" value="{{user.profilePic}}"></input>
