added original redis client and replaced harcoded host on front end js

--- a/views/room.html
+++ b/views/room.html
@@ -26,6 +26,7 @@
 <input type="hidden" name="userPic" value="{{user.profilePic}}"></input>
 <input type="hidden" name="roomId" value="{{id}}"></input>
 <input type="hidden" name="roomTitle" value="{{title}}"></input>
+<input type="hidden" name="host" value="{{host}}"></input>
 
 
 <script src="/public/js/chat.js"></script>
