--- a/views/rooms.html
+++ b/views/rooms.html
@@ -10,4 +10,5 @@
 
 </ul>
 <a href="/logout">Logout</a>
+<input type="hidden" name="host" value="{{host}}"></input>
 <script src="/public/js/rooms.js"></script>
