--- a/views/room.html
+++ b/views/room.html
@@ -1,32 +1,21 @@
-<h1>Welcome to the {{title}}</h1>
-<div class="logged">
-  <h1>Logged in</h1>
-  <img src="{{user.profilePic}}" alt=""/>
-  <p>{{user.fullName}}</p>
-</div>
-<br>
-<br>
-<h1>Active users</h1>
-<div class="chatUsers">
+{{>top_banner}}
 
+<div class="active-users">
+  <button id="slide-on">Show</button>
+    <ul class="users-list">
+      <!-- here goes active users -->
+    </ul>
 </div>
 
 <div class="chatMessages">
-
+<!-- here goes messages -->
 </div>
-<br>
-<br>
-<br>
+
 <div class="typePanel">
-  <input type="text" name="userInput" placeholder="Type here and press enter">
+  <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+  <input type="text" name="userInput" placeholder="Type message ...">
 </div>
 
-<a href="/rooms">Rooms</a>
-<input type="hidden" name="userName" value="{{user.fullName}}"></input>
-<input type="hidden" name="userPic" value="{{user.profilePic}}"></input>
-<input type="hidden" name="roomId" value="{{id}}"></input>
-<input type="hidden" name="roomTitle" value="{{title}}"></input>
-<input type="hidden" name="host" value="{{host}}"></input>
-
+{{>hidden_fields}}
 
 <script src="/public/js/chat.js"></script>
