--- a/public/css/main.css
+++ b/public/css/main.css
@@ -143,6 +143,66 @@ input[name="userInput"]:focus{
   color: #252525;
 }
 
+.chatMessages {
+  margin-top: 2.8em;
+}
+
+.chatBlock {
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+
+.chatBlock p img {
+  width: 30px;
+  border-radius: 50%;
+}
+
+.chatBlock p.msg {
+  margin-left: 30px;
+  width: 80vw;
+  align-self: center;
+  padding: 10px 18px;
+  border-radius: 30px;
+  position: relative;
+  background-color: #fff;
+}
+
+.chatBlock p.msg::before {
+  border-radius: 10px;
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  display: block;
+  position: absolute;
+  content: "";
+  /*commented out are another option*/
+  /*bottom: -8px;
+  left: -12px;*/
+  bottom: 18px;
+  left: -20px;
+}
+.chatBlock p.msg::after {
+  border-radius: 20px;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  display: block;
+  position: absolute;
+  content: "";
+  /*background-color: #E6E7ED;*/
+  /*commented out are another option*/
+  /*bottom: 0;*/
+  /*left: -5px;*/
+  bottom: 6px;
+  left: -10px;
+}
+
 /* End message input */
 
 
