--- a/views/room.html
+++ b/views/room.html
@@ -1,5 +1,4 @@
 {{>top_banner}}
-
 <div class="active-users">
   <button id="slide-on">Show</button>
     <ul class="users-list">
@@ -15,7 +14,15 @@
   <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
   <input type="text" name="userInput" placeholder="Type message ...">
 </div>
-
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <defs>
+    <filter id="gooeyAnimationFilter">
+      <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+      <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+      <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+    </filter>
+  </defs>
+</svg>
 {{>hidden_fields}}
 
 <script src="/public/js/chat.js"></script>
