--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: #CEB9FE;
+  background-color: #01A0FE;
 }
 
 h1 {
@@ -64,7 +64,7 @@ header {
   height: 92.5%;
   position: fixed;
   right: 0;
-  background-color: #B8A6E4;
+  background-color: #0296EC;
   top: 2.3em;
   overflow-y: auto;
 }
@@ -76,7 +76,7 @@ header {
   display: -o-flex;
   display: flex;
   justify-content: flex-start;
-  border-bottom: 1px solid #A68EE0;
+  border-bottom: 1px solid rgba(255, 236, 87, 0.39);
   padding: 10px;
 }
 
