basic style login page plsu bubble button

--- a/views/layout/default.html
+++ b/views/layout/default.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0" />
-  <title>Chat</title>
+  <title>Bubbles</title>
   <link rel="icon" href="#">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/public/css/reset.css" media="screen" />
@@ -12,7 +12,6 @@
   <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 <body>
 	{{{content}}}
-
   <script src="/socket.io/socket.io.js"></script>
 
 </body>
