--- a/views/home.html
+++ b/views/home.html
@@ -10,11 +10,11 @@
       </defs>
     </svg>
 
-    <span class="button--bubble__container">
-      <a href="/login" class="button button--bubble">
-        Login
+    <span class="button-bubble-container">
+      <a href="/login" class="button button-bubble">
+        Login via Facebook
       </a>
-      <span class="button--bubble__effect-container">
+      <span class="button-bubble-effect-container">
         <span class="circle top-left"></span>
         <span class="circle top-left"></span>
         <span class="circle top-left"></span>
