--- a/views/partials/top_banner.html
+++ b/views/partials/top_banner.html
@@ -1,7 +1,11 @@
 <header>
   <section class="top-banner">
     <a href="/rooms"><i class="fa fa-home" aria-hidden="true"></i></a>
+    {{#if title}}
     <p>{{title}}</p>
+    {{else}}
+    <p>{{user.fullName}}</p>
+    {{/if}}
     <a href="#"><img src="{{user.profilePic}}" alt="" /></a>
   </section>
 </header>
