--- a/views/room.html
+++ b/views/room.html
@@ -1,6 +1,6 @@
 {{>top_banner}}
 <div class="active-users">
-  <button id="slide-on">Show</button>
+  <button id="slide-on"><i class="fa fa-arrows-h" aria-hidden="true"></i></button>
     <ul class="users-list">
       <!-- here goes active users -->
     </ul>
