--- a/public/css/main.css
+++ b/public/css/main.css
@@ -386,6 +386,13 @@ input[name="newRoom"] {
   background-color: #FFEC57;
   border: none;
 }
+
+.roomsList span {
+  margin-left: 20px;
+  border-radius: 50%;
+  background-color: #FFEC57;
+  padding: 4px 10px;
+}
 /*end rooms styling */
 
 @media only screen and (max-width: 1824px) {
