--- a/public/css/main.css
+++ b/public/css/main.css
@@ -243,7 +243,7 @@ input[name="userInput"] {
   border: 0;
   background-color: inherit;
   font-size: 1em;
-  height: 2em;
+  /*height: 2em;*/
   width: 85%;
   padding: 1em;
   margin-right: .1%;
@@ -400,7 +400,7 @@ input[name="newRoom"] {
     width: 230px;
   }
 
-  .chatBlock p.msg {
+  .chatBlock p.msg, .chatBlockOthers p.msg {
     width: 75vw;
   }
 
@@ -411,7 +411,7 @@ input[name="newRoom"] {
     width: 220px;
   }
 
-  .chatBlock p.msg {
+  .chatBlock p.msg, .chatBlockOthers p.msg {
     width: 60vw;
   }
 
@@ -429,7 +429,7 @@ input[name="newRoom"] {
     font-size: 0.9em;
   }
 
-  .chatBlock p.msg {
+  .chatBlock p.msg, .chatBlockOthers p.msg {
     width: 60vw;
   }
 
@@ -458,7 +458,7 @@ input[name="newRoom"] {
     font-size: 0.8em;
   }
 
-  .chatBlock p.msg {
+  .chatBlock p.msg, .chatBlockOthers p.msg {
     width: 70vw;
   }
 
