--- a/public/css/main.css
+++ b/public/css/main.css
@@ -243,9 +243,8 @@ input[name="userInput"] {
   border: 0;
   background-color: inherit;
   font-size: 1em;
-  /*height: 2em;*/
   width: 85%;
-  padding: 1em;
+  padding: 10px;
   margin-right: .1%;
   color: #000000;
   z-index: 1;
@@ -408,7 +407,7 @@ input[name="newRoom"] {
 
 @media only screen and (max-width: 1224px) {
   .active-users {
-    width: 220px;
+    width: 200px;
   }
 
   .chatBlock p.msg, .chatBlockOthers p.msg {
@@ -419,7 +418,7 @@ input[name="newRoom"] {
 
 @media only screen and (max-width: 768px) {
   .active-users {
-    width: 180px;
+    width: 160px;
   }
   .users-list img {
     width: 40px;
@@ -448,6 +447,7 @@ input[name="newRoom"] {
   .active-users {
     width: 150px;
     right: -120px;
+    z-index: 9999;
   }
 
   .users-list img {
