--- a/views/home.html
+++ b/views/home.html
@@ -1,10 +1,8 @@
 <div class="wrapper">
-  <div class="logo-container">
-    <h1>Logo</h1>
-  </div>
-
-
+  
   <div class="login-wrapper">
+    <h1><img src="/public/img/logoChat.png" alt="Bubbles" /></h1>
+    <h1>Bubbles - let the conversation pop!</h1>
     <div class="login">
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" class="goo">
         <defs>
